Kaggle Notebook | Python Learning | Version 7

--- a/python-learning.ipynb
+++ b/python-learning.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d914bdb0",
+   "id": "6de9b8a2",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2025-10-24T02:30:28.196069Z",
-     "iopub.status.busy": "2025-10-24T02:30:28.195665Z",
-     "iopub.status.idle": "2025-10-24T02:30:30.337182Z",
-     "shell.execute_reply": "2025-10-24T02:30:30.336196Z"
+     "iopub.execute_input": "2025-10-24T17:52:46.014173Z",
+     "iopub.status.busy": "2025-10-24T17:52:46.013841Z",
+     "iopub.status.idle": "2025-10-24T17:52:48.120390Z",
+     "shell.execute_reply": "2025-10-24T17:52:48.119330Z"
     },
     "papermill": {
-     "duration": 2.147754,
-     "end_time": "2025-10-24T02:30:30.338885",
+     "duration": 2.113391,
+     "end_time": "2025-10-24T17:52:48.122274",
      "exception": false,
-     "start_time": "2025-10-24T02:30:28.191131",
+     "start_time": "2025-10-24T17:52:46.008883",
      "status": "completed"
     },
     "tags": []
@@ -46,19 +46,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f008cfba",
+   "id": "cc9aaee3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-24T02:30:30.346524Z",
-     "iopub.status.busy": "2025-10-24T02:30:30.346040Z",
-     "iopub.status.idle": "2025-10-24T02:30:30.355055Z",
-     "shell.execute_reply": "2025-10-24T02:30:30.354052Z"
+     "iopub.execute_input": "2025-10-24T17:52:48.130394Z",
+     "iopub.status.busy": "2025-10-24T17:52:48.129259Z",
+     "iopub.status.idle": "2025-10-24T17:52:48.138950Z",
+     "shell.execute_reply": "2025-10-24T17:52:48.137534Z"
     },
     "papermill": {
-     "duration": 0.014645,
-     "end_time": "2025-10-24T02:30:30.356673",
+     "duration": 0.015155,
+     "end_time": "2025-10-24T17:52:48.140575",
      "exception": false,
-     "start_time": "2025-10-24T02:30:30.342028",
+     "start_time": "2025-10-24T17:52:48.125420",
      "status": "completed"
     },
     "tags": []
@@ -133,19 +133,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a5e3088e",
+   "id": "671f5a07",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-24T02:30:30.363826Z",
-     "iopub.status.busy": "2025-10-24T02:30:30.363500Z",
-     "iopub.status.idle": "2025-10-24T02:30:30.372723Z",
-     "shell.execute_reply": "2025-10-24T02:30:30.371417Z"
+     "iopub.execute_input": "2025-10-24T17:52:48.147810Z",
+     "iopub.status.busy": "2025-10-24T17:52:48.147286Z",
+     "iopub.status.idle": "2025-10-24T17:52:48.156869Z",
+     "shell.execute_reply": "2025-10-24T17:52:48.155549Z"
     },
     "papermill": {
-     "duration": 0.01522,
-     "end_time": "2025-10-24T02:30:30.374960",
+     "duration": 0.015336,
+     "end_time": "2025-10-24T17:52:48.158878",
      "exception": false,
-     "start_time": "2025-10-24T02:30:30.359740",
+     "start_time": "2025-10-24T17:52:48.143542",
      "status": "completed"
     },
     "tags": []
@@ -217,19 +217,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "42f41543",
+   "id": "ce3c7a79",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-24T02:30:30.382714Z",
-     "iopub.status.busy": "2025-10-24T02:30:30.382155Z",
-     "iopub.status.idle": "2025-10-24T02:30:30.393579Z",
-     "shell.execute_reply": "2025-10-24T02:30:30.391703Z"
+     "iopub.execute_input": "2025-10-24T17:52:48.166579Z",
+     "iopub.status.busy": "2025-10-24T17:52:48.166239Z",
+     "iopub.status.idle": "2025-10-24T17:52:48.177676Z",
+     "shell.execute_reply": "2025-10-24T17:52:48.176420Z"
     },
     "papermill": {
-     "duration": 0.017633,
-     "end_time": "2025-10-24T02:30:30.395548",
+     "duration": 0.017342,
+     "end_time": "2025-10-24T17:52:48.179253",
      "exception": false,
-     "start_time": "2025-10-24T02:30:30.377915",
+     "start_time": "2025-10-24T17:52:48.161911",
      "status": "completed"
     },
     "tags": []
@@ -327,19 +327,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0f43fbb3",
+   "id": "c18800fc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-24T02:30:30.403622Z",
-     "iopub.status.busy": "2025-10-24T02:30:30.403300Z",
-     "iopub.status.idle": "2025-10-24T02:30:30.410198Z",
-     "shell.execute_reply": "2025-10-24T02:30:30.409156Z"
+     "iopub.execute_input": "2025-10-24T17:52:48.186442Z",
+     "iopub.status.busy": "2025-10-24T17:52:48.186146Z",
+     "iopub.status.idle": "2025-10-24T17:52:48.193458Z",
+     "shell.execute_reply": "2025-10-24T17:52:48.192217Z"
     },
     "papermill": {
-     "duration": 0.012943,
-     "end_time": "2025-10-24T02:30:30.411810",
+     "duration": 0.012964,
+     "end_time": "2025-10-24T17:52:48.195253",
      "exception": false,
-     "start_time": "2025-10-24T02:30:30.398867",
+     "start_time": "2025-10-24T17:52:48.182289",
      "status": "completed"
     },
     "tags": []
@@ -385,19 +385,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "548fb583",
+   "id": "6aa5d5d6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-24T02:30:30.418842Z",
-     "iopub.status.busy": "2025-10-24T02:30:30.418522Z",
-     "iopub.status.idle": "2025-10-24T02:30:30.425743Z",
-     "shell.execute_reply": "2025-10-24T02:30:30.424825Z"
+     "iopub.execute_input": "2025-10-24T17:52:48.202581Z",
+     "iopub.status.busy": "2025-10-24T17:52:48.202237Z",
+     "iopub.status.idle": "2025-10-24T17:52:48.210370Z",
+     "shell.execute_reply": "2025-10-24T17:52:48.209066Z"
     },
     "papermill": {
-     "duration": 0.012416,
-     "end_time": "2025-10-24T02:30:30.427141",
+     "duration": 0.014006,
+     "end_time": "2025-10-24T17:52:48.212204",
      "exception": false,
-     "start_time": "2025-10-24T02:30:30.414725",
+     "start_time": "2025-10-24T17:52:48.198198",
      "status": "completed"
     },
     "tags": []
@@ -454,19 +454,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c9be8cfb",
+   "id": "5730d3f1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-24T02:30:30.434905Z",
-     "iopub.status.busy": "2025-10-24T02:30:30.434530Z",
-     "iopub.status.idle": "2025-10-24T02:30:30.442309Z",
-     "shell.execute_reply": "2025-10-24T02:30:30.441286Z"
+     "iopub.execute_input": "2025-10-24T17:52:48.220751Z",
+     "iopub.status.busy": "2025-10-24T17:52:48.220058Z",
+     "iopub.status.idle": "2025-10-24T17:52:48.229038Z",
+     "shell.execute_reply": "2025-10-24T17:52:48.227842Z"
     },
     "papermill": {
-     "duration": 0.01363,
-     "end_time": "2025-10-24T02:30:30.443937",
+     "duration": 0.015329,
+     "end_time": "2025-10-24T17:52:48.230856",
      "exception": false,
-     "start_time": "2025-10-24T02:30:30.430307",
+     "start_time": "2025-10-24T17:52:48.215527",
      "status": "completed"
     },
     "tags": []
@@ -530,19 +530,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3172b5f1",
+   "id": "e2bdb19c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-24T02:30:30.451900Z",
-     "iopub.status.busy": "2025-10-24T02:30:30.451029Z",
-     "iopub.status.idle": "2025-10-24T02:30:30.459581Z",
-     "shell.execute_reply": "2025-10-24T02:30:30.458025Z"
+     "iopub.execute_input": "2025-10-24T17:52:48.238926Z",
+     "iopub.status.busy": "2025-10-24T17:52:48.238587Z",
+     "iopub.status.idle": "2025-10-24T17:52:48.251119Z",
+     "shell.execute_reply": "2025-10-24T17:52:48.249955Z"
     },
     "papermill": {
-     "duration": 0.014163,
-     "end_time": "2025-10-24T02:30:30.461153",
+     "duration": 0.018717,
+     "end_time": "2025-10-24T17:52:48.252777",
      "exception": false,
-     "start_time": "2025-10-24T02:30:30.446990",
+     "start_time": "2025-10-24T17:52:48.234060",
      "status": "completed"
     },
     "tags": []
@@ -552,7 +552,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is Problem statement. Let's get started !....\n"
+      "This is Problem statement. Let's get started !....\n",
+      "14.0\n",
+      "['Side']\n",
+      "- Burger (Main) - 8.5\n",
+      "- Fries (Side) - 3.0\n",
+      "- Coke (Drink) - 2.5\n",
+      "Total: 14.0\n",
+      "20\n"
      ]
     }
    ],
@@ -593,42 +600,66 @@
     "    - Coke (Drink) - $2.50\n",
     "    Total: $14.00\n",
     "    \"\"\"\n",
-    "    def __init__(self):\n",
+    "    def __init__(self) ->None :\n",
     "        self.description = \"This is Problem statement. Let's get started !....\"\n",
-    "    def __str__(self):\n",
+    "    def __str__(self) -> str:\n",
     "        return self.description\n",
     "        \n",
-    "# class MenuItem:\n",
-    "#     def __init__(self,name: str, price: float, category: str):\n",
-    "#         self.name = name\n",
-    "#         self.price = price\n",
-    "#         self.category = category\n",
+    "class MenuItem: \n",
+    "    def __init__(self,name: str, price: float, category: str) ->None:\n",
+    "        self.name = name\n",
+    "        self.price = price\n",
+    "        self.category = category\n",
     "\n",
-    "# class Order:\n",
-    "#     # def __init__(self):\n",
-    "#     # # def add_item(item: MenuItem) -> None:\n",
-    "#     # # def remove_item(item_name: str) -> None:\n",
-    "#     # # def get_total() -> float:\n",
-    "#     # # def get_items_by_category(category: str) -> list:\n",
-    "#     # # def __str__() -> str:\n",
+    "class Order:\n",
+    "    def __init__(self):\n",
+    "        self.total = 0\n",
+    "        self.cart =[]\n",
+    "        self.item_list = []\n",
+    "    def add_item(self,item: MenuItem) -> None:\n",
+    "        self.cart.append(item)\n",
+    "        #print(self.cart)\n",
+    "    def remove_item(self,item_name: str) -> None:\n",
+    "        self.cart = [item for item in self.cart if self.name != item_name]\n",
+    "    def get_total(self) -> float:\n",
+    "        self.total = sum([item.price for item in self.cart])\n",
+    "        print(self.total) \n",
+    "    def get_items_by_category(self,category: str) -> list:\n",
+    "        self.item_list = [item.category for item in self.cart if item.category == category]\n",
+    "        self.mm = 20 #can be accessed directly \n",
+    "        pp = 20 #can't be accessed directly\n",
+    "        print(self.item_list)\n",
+    "    def __str__(self) -> str:\n",
+    "        lines = []\n",
+    "        for item in self.cart:\n",
+    "            lines.append(f\"- {item.name} ({item.category}) - {item.price}\")\n",
+    "        lines.append(f\"Total: {str(self.total)}\")\n",
+    "        return \"\\n\".join(lines)\n",
     "    \n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    print(problem_statement())\n",
-    "    "
+    "    order = Order()\n",
+    "    order.add_item(MenuItem(\"Burger\", 8.50, \"Main\"))\n",
+    "    order.add_item(MenuItem(\"Fries\", 3.00, \"Side\"))\n",
+    "    order.add_item(MenuItem(\"Coke\", 2.50, \"Drink\"))\n",
+    "    order.get_total()\n",
+    "    order.get_items_by_category(\"Side\")\n",
+    "    print(order)\n",
+    "    print(order.mm)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f0abc59",
+   "id": "da840fde",
    "metadata": {
     "papermill": {
-     "duration": 0.002705,
-     "end_time": "2025-10-24T02:30:30.467034",
+     "duration": 0.002786,
+     "end_time": "2025-10-24T17:52:48.258821",
      "exception": false,
-     "start_time": "2025-10-24T02:30:30.464329",
+     "start_time": "2025-10-24T17:52:48.256035",
      "status": "completed"
     },
     "tags": []
@@ -666,14 +697,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 7.914602,
-   "end_time": "2025-10-24T02:30:30.990647",
+   "duration": 8.161212,
+   "end_time": "2025-10-24T17:52:48.782748",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-10-24T02:30:23.076045",
+   "start_time": "2025-10-24T17:52:40.621536",
    "version": "2.6.0"
   }
  },
