Kaggle Notebook | Python Learning | Version 8

--- a/python-learning.ipynb
+++ b/python-learning.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6de9b8a2",
+   "id": "161a6b16",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2025-10-24T17:52:46.014173Z",
-     "iopub.status.busy": "2025-10-24T17:52:46.013841Z",
-     "iopub.status.idle": "2025-10-24T17:52:48.120390Z",
-     "shell.execute_reply": "2025-10-24T17:52:48.119330Z"
+     "iopub.execute_input": "2025-10-24T17:56:11.930016Z",
+     "iopub.status.busy": "2025-10-24T17:56:11.929726Z",
+     "iopub.status.idle": "2025-10-24T17:56:13.728604Z",
+     "shell.execute_reply": "2025-10-24T17:56:13.727719Z"
     },
     "papermill": {
-     "duration": 2.113391,
-     "end_time": "2025-10-24T17:52:48.122274",
+     "duration": 1.804553,
+     "end_time": "2025-10-24T17:56:13.730264",
      "exception": false,
-     "start_time": "2025-10-24T17:52:46.008883",
+     "start_time": "2025-10-24T17:56:11.925711",
      "status": "completed"
     },
     "tags": []
@@ -46,19 +46,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cc9aaee3",
+   "id": "b18e8b59",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-24T17:52:48.130394Z",
-     "iopub.status.busy": "2025-10-24T17:52:48.129259Z",
-     "iopub.status.idle": "2025-10-24T17:52:48.138950Z",
-     "shell.execute_reply": "2025-10-24T17:52:48.137534Z"
+     "iopub.execute_input": "2025-10-24T17:56:13.737065Z",
+     "iopub.status.busy": "2025-10-24T17:56:13.736245Z",
+     "iopub.status.idle": "2025-10-24T17:56:13.744154Z",
+     "shell.execute_reply": "2025-10-24T17:56:13.743290Z"
     },
     "papermill": {
-     "duration": 0.015155,
-     "end_time": "2025-10-24T17:52:48.140575",
+     "duration": 0.012311,
+     "end_time": "2025-10-24T17:56:13.745396",
      "exception": false,
-     "start_time": "2025-10-24T17:52:48.125420",
+     "start_time": "2025-10-24T17:56:13.733085",
      "status": "completed"
     },
     "tags": []
@@ -133,19 +133,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "671f5a07",
+   "id": "7166716a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-24T17:52:48.147810Z",
-     "iopub.status.busy": "2025-10-24T17:52:48.147286Z",
-     "iopub.status.idle": "2025-10-24T17:52:48.156869Z",
-     "shell.execute_reply": "2025-10-24T17:52:48.155549Z"
+     "iopub.execute_input": "2025-10-24T17:56:13.751688Z",
+     "iopub.status.busy": "2025-10-24T17:56:13.751068Z",
+     "iopub.status.idle": "2025-10-24T17:56:13.758109Z",
+     "shell.execute_reply": "2025-10-24T17:56:13.757082Z"
     },
     "papermill": {
-     "duration": 0.015336,
-     "end_time": "2025-10-24T17:52:48.158878",
+     "duration": 0.011432,
+     "end_time": "2025-10-24T17:56:13.759441",
      "exception": false,
-     "start_time": "2025-10-24T17:52:48.143542",
+     "start_time": "2025-10-24T17:56:13.748009",
      "status": "completed"
     },
     "tags": []
@@ -217,19 +217,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ce3c7a79",
+   "id": "ccd71b44",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-24T17:52:48.166579Z",
-     "iopub.status.busy": "2025-10-24T17:52:48.166239Z",
-     "iopub.status.idle": "2025-10-24T17:52:48.177676Z",
-     "shell.execute_reply": "2025-10-24T17:52:48.176420Z"
+     "iopub.execute_input": "2025-10-24T17:56:13.766104Z",
+     "iopub.status.busy": "2025-10-24T17:56:13.765608Z",
+     "iopub.status.idle": "2025-10-24T17:56:13.774445Z",
+     "shell.execute_reply": "2025-10-24T17:56:13.773596Z"
     },
     "papermill": {
-     "duration": 0.017342,
-     "end_time": "2025-10-24T17:52:48.179253",
+     "duration": 0.013614,
+     "end_time": "2025-10-24T17:56:13.775722",
      "exception": false,
-     "start_time": "2025-10-24T17:52:48.161911",
+     "start_time": "2025-10-24T17:56:13.762108",
      "status": "completed"
     },
     "tags": []
@@ -327,19 +327,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c18800fc",
+   "id": "a750069f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-24T17:52:48.186442Z",
-     "iopub.status.busy": "2025-10-24T17:52:48.186146Z",
-     "iopub.status.idle": "2025-10-24T17:52:48.193458Z",
-     "shell.execute_reply": "2025-10-24T17:52:48.192217Z"
+     "iopub.execute_input": "2025-10-24T17:56:13.782044Z",
+     "iopub.status.busy": "2025-10-24T17:56:13.781396Z",
+     "iopub.status.idle": "2025-10-24T17:56:13.787695Z",
+     "shell.execute_reply": "2025-10-24T17:56:13.786791Z"
     },
     "papermill": {
-     "duration": 0.012964,
-     "end_time": "2025-10-24T17:52:48.195253",
+     "duration": 0.010614,
+     "end_time": "2025-10-24T17:56:13.788929",
      "exception": false,
-     "start_time": "2025-10-24T17:52:48.182289",
+     "start_time": "2025-10-24T17:56:13.778315",
      "status": "completed"
     },
     "tags": []
@@ -385,19 +385,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6aa5d5d6",
+   "id": "cade29f9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-24T17:52:48.202581Z",
-     "iopub.status.busy": "2025-10-24T17:52:48.202237Z",
-     "iopub.status.idle": "2025-10-24T17:52:48.210370Z",
-     "shell.execute_reply": "2025-10-24T17:52:48.209066Z"
+     "iopub.execute_input": "2025-10-24T17:56:13.794899Z",
+     "iopub.status.busy": "2025-10-24T17:56:13.794627Z",
+     "iopub.status.idle": "2025-10-24T17:56:13.800837Z",
+     "shell.execute_reply": "2025-10-24T17:56:13.800089Z"
     },
     "papermill": {
-     "duration": 0.014006,
-     "end_time": "2025-10-24T17:52:48.212204",
+     "duration": 0.010724,
+     "end_time": "2025-10-24T17:56:13.802270",
      "exception": false,
-     "start_time": "2025-10-24T17:52:48.198198",
+     "start_time": "2025-10-24T17:56:13.791546",
      "status": "completed"
     },
     "tags": []
@@ -454,19 +454,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5730d3f1",
+   "id": "490d1a55",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-24T17:52:48.220751Z",
-     "iopub.status.busy": "2025-10-24T17:52:48.220058Z",
-     "iopub.status.idle": "2025-10-24T17:52:48.229038Z",
-     "shell.execute_reply": "2025-10-24T17:52:48.227842Z"
+     "iopub.execute_input": "2025-10-24T17:56:13.809018Z",
+     "iopub.status.busy": "2025-10-24T17:56:13.808258Z",
+     "iopub.status.idle": "2025-10-24T17:56:13.815763Z",
+     "shell.execute_reply": "2025-10-24T17:56:13.815100Z"
     },
     "papermill": {
-     "duration": 0.015329,
-     "end_time": "2025-10-24T17:52:48.230856",
+     "duration": 0.011982,
+     "end_time": "2025-10-24T17:56:13.816949",
      "exception": false,
-     "start_time": "2025-10-24T17:52:48.215527",
+     "start_time": "2025-10-24T17:56:13.804967",
      "status": "completed"
     },
     "tags": []
@@ -530,19 +530,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e2bdb19c",
+   "id": "9d74cb10",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-24T17:52:48.238926Z",
-     "iopub.status.busy": "2025-10-24T17:52:48.238587Z",
-     "iopub.status.idle": "2025-10-24T17:52:48.251119Z",
-     "shell.execute_reply": "2025-10-24T17:52:48.249955Z"
+     "iopub.execute_input": "2025-10-24T17:56:13.823165Z",
+     "iopub.status.busy": "2025-10-24T17:56:13.822909Z",
+     "iopub.status.idle": "2025-10-24T17:56:13.833578Z",
+     "shell.execute_reply": "2025-10-24T17:56:13.832715Z"
     },
     "papermill": {
-     "duration": 0.018717,
-     "end_time": "2025-10-24T17:52:48.252777",
+     "duration": 0.015217,
+     "end_time": "2025-10-24T17:56:13.834833",
      "exception": false,
-     "start_time": "2025-10-24T17:52:48.234060",
+     "start_time": "2025-10-24T17:56:13.819616",
      "status": "completed"
     },
     "tags": []
@@ -564,7 +564,7 @@
     }
    ],
    "source": [
-    "# -------------------- Q18: RESTAURANT ORDER SYSTEM --------------------\n",
+    "# -------------------- RESTAURANT ORDER SYSTEM --------------------\n",
     "class problem_statement:\n",
     "    \"\"\"\n",
     "    Design a Restaurant Order system. Use these exact names and behaviors:\n",
@@ -653,13 +653,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da840fde",
+   "id": "a2242bb5",
    "metadata": {
     "papermill": {
-     "duration": 0.002786,
-     "end_time": "2025-10-24T17:52:48.258821",
+     "duration": 0.002395,
+     "end_time": "2025-10-24T17:56:13.840007",
      "exception": false,
-     "start_time": "2025-10-24T17:52:48.256035",
+     "start_time": "2025-10-24T17:56:13.837612",
      "status": "completed"
     },
     "tags": []
@@ -697,14 +697,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 8.161212,
-   "end_time": "2025-10-24T17:52:48.782748",
+   "duration": 6.919757,
+   "end_time": "2025-10-24T17:56:14.361039",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-10-24T17:52:40.621536",
+   "start_time": "2025-10-24T17:56:07.441282",
    "version": "2.6.0"
   }
  },
