Kaggle Notebook | Python Learning | Version 9

--- a/python-learning.ipynb
+++ b/python-learning.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "161a6b16",
+   "id": "765edc47",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2025-10-24T17:56:11.930016Z",
-     "iopub.status.busy": "2025-10-24T17:56:11.929726Z",
-     "iopub.status.idle": "2025-10-24T17:56:13.728604Z",
-     "shell.execute_reply": "2025-10-24T17:56:13.727719Z"
+     "iopub.execute_input": "2025-10-25T07:56:47.500182Z",
+     "iopub.status.busy": "2025-10-25T07:56:47.499870Z",
+     "iopub.status.idle": "2025-10-25T07:56:49.673139Z",
+     "shell.execute_reply": "2025-10-25T07:56:49.672252Z"
     },
     "papermill": {
-     "duration": 1.804553,
-     "end_time": "2025-10-24T17:56:13.730264",
+     "duration": 2.180133,
+     "end_time": "2025-10-25T07:56:49.674947",
      "exception": false,
-     "start_time": "2025-10-24T17:56:11.925711",
+     "start_time": "2025-10-25T07:56:47.494814",
      "status": "completed"
     },
     "tags": []
@@ -46,19 +46,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b18e8b59",
+   "id": "5caffe5b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-24T17:56:13.737065Z",
-     "iopub.status.busy": "2025-10-24T17:56:13.736245Z",
-     "iopub.status.idle": "2025-10-24T17:56:13.744154Z",
-     "shell.execute_reply": "2025-10-24T17:56:13.743290Z"
+     "iopub.execute_input": "2025-10-25T07:56:49.682379Z",
+     "iopub.status.busy": "2025-10-25T07:56:49.681910Z",
+     "iopub.status.idle": "2025-10-25T07:56:49.690485Z",
+     "shell.execute_reply": "2025-10-25T07:56:49.689514Z"
     },
     "papermill": {
-     "duration": 0.012311,
-     "end_time": "2025-10-24T17:56:13.745396",
+     "duration": 0.013862,
+     "end_time": "2025-10-25T07:56:49.691985",
      "exception": false,
-     "start_time": "2025-10-24T17:56:13.733085",
+     "start_time": "2025-10-25T07:56:49.678123",
      "status": "completed"
     },
     "tags": []
@@ -133,19 +133,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7166716a",
+   "id": "b13eaa26",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-24T17:56:13.751688Z",
-     "iopub.status.busy": "2025-10-24T17:56:13.751068Z",
-     "iopub.status.idle": "2025-10-24T17:56:13.758109Z",
-     "shell.execute_reply": "2025-10-24T17:56:13.757082Z"
+     "iopub.execute_input": "2025-10-25T07:56:49.698880Z",
+     "iopub.status.busy": "2025-10-25T07:56:49.698478Z",
+     "iopub.status.idle": "2025-10-25T07:56:49.706101Z",
+     "shell.execute_reply": "2025-10-25T07:56:49.704974Z"
     },
     "papermill": {
-     "duration": 0.011432,
-     "end_time": "2025-10-24T17:56:13.759441",
+     "duration": 0.0132,
+     "end_time": "2025-10-25T07:56:49.708075",
      "exception": false,
-     "start_time": "2025-10-24T17:56:13.748009",
+     "start_time": "2025-10-25T07:56:49.694875",
      "status": "completed"
     },
     "tags": []
@@ -217,19 +217,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ccd71b44",
+   "id": "3634c8c0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-24T17:56:13.766104Z",
-     "iopub.status.busy": "2025-10-24T17:56:13.765608Z",
-     "iopub.status.idle": "2025-10-24T17:56:13.774445Z",
-     "shell.execute_reply": "2025-10-24T17:56:13.773596Z"
+     "iopub.execute_input": "2025-10-25T07:56:49.715903Z",
+     "iopub.status.busy": "2025-10-25T07:56:49.715466Z",
+     "iopub.status.idle": "2025-10-25T07:56:49.725462Z",
+     "shell.execute_reply": "2025-10-25T07:56:49.724547Z"
     },
     "papermill": {
-     "duration": 0.013614,
-     "end_time": "2025-10-24T17:56:13.775722",
+     "duration": 0.015704,
+     "end_time": "2025-10-25T07:56:49.726937",
      "exception": false,
-     "start_time": "2025-10-24T17:56:13.762108",
+     "start_time": "2025-10-25T07:56:49.711233",
      "status": "completed"
     },
     "tags": []
@@ -327,19 +327,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a750069f",
+   "id": "f6f6f022",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-24T17:56:13.782044Z",
-     "iopub.status.busy": "2025-10-24T17:56:13.781396Z",
-     "iopub.status.idle": "2025-10-24T17:56:13.787695Z",
-     "shell.execute_reply": "2025-10-24T17:56:13.786791Z"
+     "iopub.execute_input": "2025-10-25T07:56:49.734889Z",
+     "iopub.status.busy": "2025-10-25T07:56:49.734559Z",
+     "iopub.status.idle": "2025-10-25T07:56:49.741732Z",
+     "shell.execute_reply": "2025-10-25T07:56:49.740645Z"
     },
     "papermill": {
-     "duration": 0.010614,
-     "end_time": "2025-10-24T17:56:13.788929",
+     "duration": 0.01316,
+     "end_time": "2025-10-25T07:56:49.743320",
      "exception": false,
-     "start_time": "2025-10-24T17:56:13.778315",
+     "start_time": "2025-10-25T07:56:49.730160",
      "status": "completed"
     },
     "tags": []
@@ -385,19 +385,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cade29f9",
+   "id": "ccf51f01",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-24T17:56:13.794899Z",
-     "iopub.status.busy": "2025-10-24T17:56:13.794627Z",
-     "iopub.status.idle": "2025-10-24T17:56:13.800837Z",
-     "shell.execute_reply": "2025-10-24T17:56:13.800089Z"
+     "iopub.execute_input": "2025-10-25T07:56:49.750560Z",
+     "iopub.status.busy": "2025-10-25T07:56:49.750206Z",
+     "iopub.status.idle": "2025-10-25T07:56:49.757568Z",
+     "shell.execute_reply": "2025-10-25T07:56:49.756635Z"
     },
     "papermill": {
-     "duration": 0.010724,
-     "end_time": "2025-10-24T17:56:13.802270",
+     "duration": 0.012817,
+     "end_time": "2025-10-25T07:56:49.759193",
      "exception": false,
-     "start_time": "2025-10-24T17:56:13.791546",
+     "start_time": "2025-10-25T07:56:49.746376",
      "status": "completed"
     },
     "tags": []
@@ -454,19 +454,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "490d1a55",
+   "id": "d5073d0f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-24T17:56:13.809018Z",
-     "iopub.status.busy": "2025-10-24T17:56:13.808258Z",
-     "iopub.status.idle": "2025-10-24T17:56:13.815763Z",
-     "shell.execute_reply": "2025-10-24T17:56:13.815100Z"
+     "iopub.execute_input": "2025-10-25T07:56:49.766975Z",
+     "iopub.status.busy": "2025-10-25T07:56:49.766187Z",
+     "iopub.status.idle": "2025-10-25T07:56:49.774410Z",
+     "shell.execute_reply": "2025-10-25T07:56:49.773534Z"
     },
     "papermill": {
-     "duration": 0.011982,
-     "end_time": "2025-10-24T17:56:13.816949",
+     "duration": 0.013697,
+     "end_time": "2025-10-25T07:56:49.776065",
      "exception": false,
-     "start_time": "2025-10-24T17:56:13.804967",
+     "start_time": "2025-10-25T07:56:49.762368",
      "status": "completed"
     },
     "tags": []
@@ -530,19 +530,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9d74cb10",
+   "id": "eebc5d37",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-24T17:56:13.823165Z",
-     "iopub.status.busy": "2025-10-24T17:56:13.822909Z",
-     "iopub.status.idle": "2025-10-24T17:56:13.833578Z",
-     "shell.execute_reply": "2025-10-24T17:56:13.832715Z"
+     "iopub.execute_input": "2025-10-25T07:56:49.784210Z",
+     "iopub.status.busy": "2025-10-25T07:56:49.783680Z",
+     "iopub.status.idle": "2025-10-25T07:56:49.796772Z",
+     "shell.execute_reply": "2025-10-25T07:56:49.795727Z"
     },
     "papermill": {
-     "duration": 0.015217,
-     "end_time": "2025-10-24T17:56:13.834833",
+     "duration": 0.018991,
+     "end_time": "2025-10-25T07:56:49.798397",
      "exception": false,
-     "start_time": "2025-10-24T17:56:13.819616",
+     "start_time": "2025-10-25T07:56:49.779406",
      "status": "completed"
     },
     "tags": []
@@ -652,14 +652,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "0143c58a",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-25T07:56:49.806307Z",
+     "iopub.status.busy": "2025-10-25T07:56:49.805969Z",
+     "iopub.status.idle": "2025-10-25T07:56:49.813022Z",
+     "shell.execute_reply": "2025-10-25T07:56:49.812076Z"
+    },
+    "papermill": {
+     "duration": 0.012837,
+     "end_time": "2025-10-25T07:56:49.814701",
+     "exception": false,
+     "start_time": "2025-10-25T07:56:49.801864",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labeling Even and Odd Numbers :['Odd', 'Odd', 'Even', 'Even', 'Odd', 'Odd']\n",
+      "Checking multiple condition using Lambda:['A', 'C', 'B', 'A', 'C']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def list_comprehension_lambda_explore() ->None:\n",
+    "    \n",
+    "    '''Labeling Even and Odd Numbers using list comprehension and Lambda at a time'''\n",
+    "    nums = [-3, -1, 0, 2, 5, -7]\n",
+    "    label_even_odd = [(lambda x: \"Even\" if x%2==0 else \"Odd\")(x) for x in nums]\n",
+    "    #label_even_odd = [lambda x: \"Even\" if x%2==0 else \"Odd\" for x in nums] # return object address\n",
+    "    print(f\"Labeling Even and Odd Numbers :{label_even_odd}\")\n",
+    "    lst = [85,40,78,92,53]\n",
+    "    result = [(lambda x : \"A\" if x>=85 else (\"B\" if x>75 else \"C\"))(x) for x in lst]\n",
+    "    print(f\"Checking multiple condition using Lambda:{result}\")\n",
+    "    \n",
+    "if __name__==\"__main__\":\n",
+    "    list_comprehension_lambda_explore()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a2242bb5",
+   "id": "1ab862ad",
    "metadata": {
     "papermill": {
-     "duration": 0.002395,
-     "end_time": "2025-10-24T17:56:13.840007",
+     "duration": 0.002923,
+     "end_time": "2025-10-25T07:56:49.820925",
      "exception": false,
-     "start_time": "2025-10-24T17:56:13.837612",
+     "start_time": "2025-10-25T07:56:49.818002",
      "status": "completed"
     },
     "tags": []
@@ -697,14 +743,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 6.919757,
-   "end_time": "2025-10-24T17:56:14.361039",
+   "duration": 8.499511,
+   "end_time": "2025-10-25T07:56:50.345689",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-10-24T17:56:07.441282",
+   "start_time": "2025-10-25T07:56:41.846178",
    "version": "2.6.0"
   }
  },
